complete program with interface no CLI inserted